--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +11,14 @@
     <header>
       <h1 id="title">Paleta de Cores</h1>
     </header>
-    <main></main>
+    <main>
+      <section id="color-palette">
+        <div class="color first-block"></div>
+        <div class="color second-block"></div>
+        <div class="color third-block"></div>
+        <div class="color fourth-block"></div>
+      </section>
+    </main>
+    <script src="script.js"></script>
   </body>
 </html>
