adicionando um botão para gerar cores aleatórias para a paleta de cores

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="color third-block"></div>
         <div class="color fourth-block"></div>
       </section>
+      <button id="button-random-color">Cores aleatórias</button>
     </main>
     <script src="script.js"></script>
   </body>
