adicionando a cor preta como cor inicial da paleta de cores

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <section id="color-palette">
-        <div class="color first-block"></div>
+        <div class="color first-block selected"></div>
         <div class="color second-block"></div>
         <div class="color third-block"></div>
         <div class="color fourth-block"></div>
