adicionando um botão que retorne a cor do quadro para a cor inicial

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="color fourth-block"></div>
       </section>
       <button id="button-random-color">Cores aleatórias</button>
+      <button id="clear-board">Limpar</button>
       <section id="pixel-board">
         <div class="line">
             <div class="pixel"></div>
