adicionando um input que permite à pessoa usuária preencher um novo tamanho para o quadro de pixels

--- a/index.html
+++ b/index.html
@@ -20,43 +20,9 @@
       </section>
       <button id="button-random-color">Cores aleatórias</button>
       <button id="clear-board">Limpar</button>
-      <section id="pixel-board">
-        <div class="line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-      </section>
+      <input id="board-size" type="number" min="1"/>
+      <button id="generate-board">VQV</button>
+      <section id="pixel-board"></section>
     </main>
     <script src="script.js"></script>
   </body>
