adicionando uma função para manter o tamanho novo do board ao recarregar a página

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <div class="color third-block"></div>
         <div class="color fourth-block"></div>
       </section>
-      <button id="button-random-color">Cores aleatórias</button>
-      <button id="clear-board">Limpar</button>
-      <input id="board-size" type="number" min="1"/>
-      <button id="generate-board">VQV</button>
+      <section id="buttons">
+        <button id="button-random-color">Cores aleatórias</button>
+        <button id="clear-board">Limpar</button>
+        <input id="board-size" type="number" min="1" />
+        <button id="generate-board">VQV</button>
+      </section>
       <section id="pixel-board"></section>
     </main>
     <script src="script.js"></script>
